ALB/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  -  http:
      paths:
        - path: /dogs
          pathType: Prefix
          backend:
            service:
              name: dogs-service
              port:
                number: 5678
        - path: /cats
          pathType: Prefix
          backend:
            service:
              name: cats-service
              port:
                number: 5678
        - path: /birds
          pathType: Prefix
          backend:
            service:
              name: birds-service
              port:
                number: 5678
